# ImageMetadataStats

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  REQUIREMENTS.md  THIRDPARTY_NOTICES.txt  benchmark_exif.py  benchmark_preview.py  build.sh  flake8_report.txt  pyproject.toml  script.py  test_dl.py  test_exiftool.py  test_exiftool_helper.py  test_exiftool_pool.py  test_exiftool_sequential.py  test_get_exif_data_pool.py  test_thread_local.py
.github/workflows/: build.yml
benchmarks/: benchmark_cli_metadata_extraction.py  benchmark_duplicates_loop_overhead.py  benchmark_find_duplicates.py  benchmark_find_related_files.py  benchmark_scan.py  benchmark_scan_processes.py  benchmark_scan_threads.py
scripts/: build.py  generate_icons.py  generate_notices.py
src/image_metadata_analyzer/: analyzer.py  cli.py  controllers.py  duplicates.py  gui.py  models.py  reader.py  sharpness.py  sharpness_gui.py  utils.py  visualizer.py
tests/: test_aggregation.py  test_analyzer.py  test_arw_support.py  test_cli.py  test_controllers.py  test_duplicates.py  test_formatting.py  test_gui.py  test_models.py  test_noise_calc.py  test_reader.py  test_sharpness.py  test_sharpness_gui_basic.py  test_utils.py  test_visualizer.py  verify_error_paths.py
