[project]
name = "image-metadata-analyzer"
version = "0.1.0"
description = "A tool to analyze image metadata and provide statistics."
authors = [
    {name = "Jules"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "exifread (>=3.5.1,<4.0.0)",
    "pyexiftool (>=0.5.6,<0.6.0)",
    "send2trash (>=2.0.0,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "rawpy (>=0.25.1,<0.26.0)"
]

[project.scripts]
image-metadata-analyzer = "image_metadata_analyzer.cli:main"
image-metadata-gui = "image_metadata_analyzer.gui:main"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pyinstaller (>=6.17.0,<7.0.0)",
    "cairosvg (>=2.8.2,<3.0.0)",
    "pip-licenses (>=5.5.0,<6.0.0)",
    "mypy (>=1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
